# fd

./: .containerignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  entrypoint-alpine.sh  entrypoint.sh
.cargo/: config
benches/: filtering_benchmark.rs
src/: lib.rs  main.rs  tests.rs
