[package]
name = "fd"
version = "0.1.2"
edition = "2021"
authors = ["Frank Peters"]

[[bin]]
name = "fd"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
flate2 = "1.0.26"
lazy_static = "1.4.0"
mimalloc = "0.1.37"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
#strip = "debuginfo"
debug=true
panic = "abort"

[[bench]]
name = "filtering_benchmark"
harness = false

[features]
win_only = []
